--- a/src/index.html
+++ b/src/index.html
@@ -16,6 +16,9 @@
   <meta name="theme-color" content="#ffffff">
 </head>
 <body>
+  <noscript>
+    <div class="noscript-message">You need to enable javascript to test this demo</div>
+  </noscript>
   <div id="app"></div>
   <script src="app.tsx"></script>
 </body>
